2001-08-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Create random # of monsters, and find
	free spots for them (which could be better, since it's not
	checking their whole footprints, but I want to create a general
	method for doing that).
	* usecode/ucinternal.cc: SI crystal balls working again.
	* usecode/intrinsics.cc: run_usecode() replaced by set_path_failure().
	
2001-08-15  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc (If_else_path_actor_action): New action type.
	* ucinternal.cc,intrinsics.cc:  Rewrote 'path_run_usecode()'.
	Still not quite done (got to redo run_usecode()).

2001-08-14  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/Docs/opcodes.txt: more updates, changes to handle
	additional output format options
	* usecode/ucxt/*.[cc|h]: fiddled with command line options; added
	additional assembler output options; old-ucs format "works" extremely
	brokenly rather then assert() failing; can now output entire
	USECODE file; squished obscure crash bug.
	* (quick update) usecode/ucxt/*: removed imbedded intrinsic table,
	now stealing it from ??intriniscs.h

2001-08-14  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Test 'dont_die' flag during combat.

2001-08-13  Max Horn <max@quendi.de>
	* audio/Audio.cc: make use of exceptions
	* audio/midi_drivers/mac_midi.cc: dynamic buffer resizing, enhanced pitch
	  bend support, some fixes
	* gumps/File_gump.cc: fixed Gump_text::paint() to match other gumps
	* gumps/Newfile_gump.cc: changed to not restore background in destructor
	* bggame.*: more code cleanup; added possibility to skip parts of the intro
	  some other changes
	* exceptions.h: added quit_exception and file_exception (base class
	  for all file related exceptions)
	* game.*: changed wait_delay to treat Return/Enter differently
	  (used by the intro to skip parts of it)
	* gamedat.cc, gamewin.*, readnpcs.cc: added red-plasma animation during game loading
	* palette.cc: fixed fade_in/fade_out