@@ -1,5 +1,9 @@
 2001-08-16  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* npcnear.cc: Don't put 'camera_actor' in combat automatically.
+	* intrinsics.cc:  Assume last parm. to si_path_run_usecode() means
+	'always' (always exec. usecode, even if path fails).
+
 	* objs/egg.cc (Egg_object): Create random # of monsters, and find
 	free spots for them (which could be better, since it's not
 	checking their whole footprints, but I want to create a general
